parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    FOR
    INT
    MAYORQUE
    MENORQUE
    NOT
    OR
    PRINT
    PUT
    UPDATE
    VARDOUBLE
    WHILE

Grammar

Rule 0     S' -> expresion
Rule 1     expresion -> lista
Rule 2     expresion -> mapa
Rule 3     expresion -> variable
Rule 4     expresion -> icadena
Rule 5     expresion -> concatenacion
Rule 6     expresion -> incremento
Rule 7     expresion -> decremento
Rule 8     expresionA -> valor operadorA valor
Rule 9     variable -> VAR ID EQUALS expresionVar PUNTCOM
Rule 10    variable -> VAR ID PUNTCOM
Rule 11    variable -> expresionBool
Rule 12    valorVar -> NUMBER
Rule 13    valorVar -> DOUBLE
Rule 14    valorVar -> CADENA
Rule 15    expresionVar -> valorVar
Rule 16    expresionVar -> ID
Rule 17    expresionVar -> expresionVar operadorA expresionVar
Rule 18    expresionBool -> VARBOOL ID EQUALS booleano pto_coma
Rule 19    expresionBool -> VAR ID EQUALS booleano pto_coma
Rule 20    booleano -> TRUE
Rule 21    booleano -> FALSE
Rule 22    lista -> expLista
Rule 23    lista -> add_lista
Rule 24    expLista -> VAR ID EQUALS NEW LISTA LPAREN NUMBER RPAREN pto_coma
Rule 25    expLista -> VAR ID EQUALS NEW LISTA LPAREN RPAREN pto_coma
Rule 26    expLista -> VAR ID EQUALS LCORCHETE elementosLista RCORCHETE pto_coma
Rule 27    add_lista -> ID LCORCHETE NUMBER RCORCHETE EQUALS NUMBER pto_coma
Rule 28    add_lista -> ID PTO ADD LPAREN NUMBER RPAREN pto_coma
Rule 29    add_lista -> ID PTO ADD LPAREN ID RPAREN pto_coma
Rule 30    elementosLista -> COMILLAS ID COMILLAS
Rule 31    elementosLista -> COMILLAS ID COMILLAS COMA elementosLista
Rule 32    elementosLista -> COMILLAS NUMBER COMILLAS
Rule 33    elementosLista -> COMILLAS NUMBER COMILLAS COMA elementosLista
Rule 34    elementosLista -> <empty>
Rule 35    mapa -> expMapa
Rule 36    mapa -> add_mapa
Rule 37    expMapa -> VAR ID EQUALS NEW MAPA LPAREN RPAREN pto_coma
Rule 38    expMapa -> MAPA ID EQUALS LCURLYB elementosMapa RCURLYB pto_coma
Rule 39    elementosMapa -> COMILLAS valor COMILLAS DOSPTO COMILLAS valor COMILLAS
Rule 40    elementosMapa -> COMILLAS valor COMILLAS DOSPTO COMILLAS valor COMILLAS COMA elementosMapa
Rule 41    elementosMapa -> COMILLAS valor COMILLAS DOSPTO NUMBER
Rule 42    elementosMapa -> COMILLAS valor COMILLAS DOSPTO NUMBER COMA elementosMapa
Rule 43    elementosMapa -> NUMBER DOSPTO COMILLAS valor COMILLAS
Rule 44    elementosMapa -> NUMBER DOSPTO COMILLAS valor COMILLAS COMA elementosMapa
Rule 45    elementosMapa -> NUMBER DOSPTO NUMBER
Rule 46    elementosMapa -> NUMBER DOSPTO NUMBER COMA elementosMapa
Rule 47    add_mapa -> ID LCORCHETE COMILLAS ID COMILLAS RCORCHETE EQUALS COMILLAS ID COMILLAS pto_coma
Rule 48    operadorA -> PLUS
Rule 49    operadorA -> MINUS
Rule 50    operadorA -> TIMES
Rule 51    operadorA -> DIVIDE
Rule 52    operadorA -> DIVIDE_E
Rule 53    incremento -> ID INCREMENTO pto_coma
Rule 54    decremento -> ID DECREMENTO pto_coma
Rule 55    icadena -> VAR ID EQUALS cadenas pto_coma
Rule 56    valor -> ID
Rule 57    valor -> NUMBER
Rule 58    concatenacion -> VAR ID EQUALS ID PTO SUBSTRING LPAREN NUMBER COMA NUMBER RPAREN pto_coma
Rule 59    cadenas -> COMILLAS ID COMILLAS
Rule 60    cadenas -> COMILLAD ID COMILLAD
Rule 61    cadenas -> COMIILLATS ID COMIILLATS
Rule 62    cadenas -> COMILLATD ID COMILLATD
Rule 63    pto_coma -> PUNTCOM

Terminals, with rules where they appear

ADD                  : 28 29
AND                  : 
CADENA               : 14
COMA                 : 31 33 40 42 44 46 58
COMIILLATS           : 61 61
COMILLAD             : 60 60
COMILLAS             : 30 30 31 31 32 32 33 33 39 39 39 39 40 40 40 40 41 41 42 42 43 43 44 44 47 47 47 47 59 59
COMILLATD            : 62 62
DECREMENTO           : 54
DIVIDE               : 51
DIVIDE_E             : 52
DOSPTO               : 39 40 41 42 43 44 45 46
DOUBLE               : 13
EQUALS               : 9 18 19 24 25 26 27 37 38 47 55 58
FALSE                : 21
FOR                  : 
ID                   : 9 10 16 18 19 24 25 26 27 28 29 29 30 31 37 38 47 47 47 53 54 55 56 58 58 59 60 61 62
INCREMENTO           : 53
INT                  : 
LCORCHETE            : 26 27 47
LCURLYB              : 38
LISTA                : 24 25
LPAREN               : 24 25 28 29 37 58
MAPA                 : 37 38
MAYORQUE             : 
MENORQUE             : 
MINUS                : 49
NEW                  : 24 25 37
NOT                  : 
NUMBER               : 12 24 27 27 28 32 33 41 42 43 44 45 45 46 46 57 58 58
OR                   : 
PLUS                 : 48
PRINT                : 
PTO                  : 28 29 58
PUNTCOM              : 9 10 63
PUT                  : 
RCORCHETE            : 26 27 47
RCURLYB              : 38
RPAREN               : 24 25 28 29 37 58
SUBSTRING            : 58
TIMES                : 50
TRUE                 : 20
UPDATE               : 
VAR                  : 9 10 19 24 25 26 37 55 58
VARBOOL              : 18
VARDOUBLE            : 
WHILE                : 
error                : 

Nonterminals, with rules where they appear

add_lista            : 23
add_mapa             : 36
booleano             : 18 19
cadenas              : 55
concatenacion        : 5
decremento           : 7
elementosLista       : 26 31 33
elementosMapa        : 38 40 42 44 46
expLista             : 22
expMapa              : 35
expresion            : 0
expresionA           : 
expresionBool        : 11
expresionVar         : 9 17 17
icadena              : 4
incremento           : 6
lista                : 1
mapa                 : 2
operadorA            : 8 17
pto_coma             : 18 19 24 25 26 27 28 29 37 38 47 53 54 55 58
valor                : 8 8 39 39 40 40 41 42 43 44
valorVar             : 15
variable             : 3

Parsing method: LALR

state 0

    (0) S' -> . expresion
    (1) expresion -> . lista
    (2) expresion -> . mapa
    (3) expresion -> . variable
    (4) expresion -> . icadena
    (5) expresion -> . concatenacion
    (6) expresion -> . incremento
    (7) expresion -> . decremento
    (22) lista -> . expLista
    (23) lista -> . add_lista
    (35) mapa -> . expMapa
    (36) mapa -> . add_mapa
    (9) variable -> . VAR ID EQUALS expresionVar PUNTCOM
    (10) variable -> . VAR ID PUNTCOM
    (11) variable -> . expresionBool
    (55) icadena -> . VAR ID EQUALS cadenas pto_coma
    (58) concatenacion -> . VAR ID EQUALS ID PTO SUBSTRING LPAREN NUMBER COMA NUMBER RPAREN pto_coma
    (53) incremento -> . ID INCREMENTO pto_coma
    (54) decremento -> . ID DECREMENTO pto_coma
    (24) expLista -> . VAR ID EQUALS NEW LISTA LPAREN NUMBER RPAREN pto_coma
    (25) expLista -> . VAR ID EQUALS NEW LISTA LPAREN RPAREN pto_coma
    (26) expLista -> . VAR ID EQUALS LCORCHETE elementosLista RCORCHETE pto_coma
    (27) add_lista -> . ID LCORCHETE NUMBER RCORCHETE EQUALS NUMBER pto_coma
    (28) add_lista -> . ID PTO ADD LPAREN NUMBER RPAREN pto_coma
    (29) add_lista -> . ID PTO ADD LPAREN ID RPAREN pto_coma
    (37) expMapa -> . VAR ID EQUALS NEW MAPA LPAREN RPAREN pto_coma
    (38) expMapa -> . MAPA ID EQUALS LCURLYB elementosMapa RCURLYB pto_coma
    (47) add_mapa -> . ID LCORCHETE COMILLAS ID COMILLAS RCORCHETE EQUALS COMILLAS ID COMILLAS pto_coma
    (18) expresionBool -> . VARBOOL ID EQUALS booleano pto_coma
    (19) expresionBool -> . VAR ID EQUALS booleano pto_coma

    VAR             shift and go to state 13
    ID              shift and go to state 14
    MAPA            shift and go to state 16
    VARBOOL         shift and go to state 17

    expresion                      shift and go to state 1
    lista                          shift and go to state 2
    mapa                           shift and go to state 3
    variable                       shift and go to state 4
    icadena                        shift and go to state 5
    concatenacion                  shift and go to state 6
    incremento                     shift and go to state 7
    decremento                     shift and go to state 8
    expLista                       shift and go to state 9
    add_lista                      shift and go to state 10
    expMapa                        shift and go to state 11
    add_mapa                       shift and go to state 12
    expresionBool                  shift and go to state 15

state 1

    (0) S' -> expresion .



state 2

    (1) expresion -> lista .

    $end            reduce using rule 1 (expresion -> lista .)


state 3

    (2) expresion -> mapa .

    $end            reduce using rule 2 (expresion -> mapa .)


state 4

    (3) expresion -> variable .

    $end            reduce using rule 3 (expresion -> variable .)


state 5

    (4) expresion -> icadena .

    $end            reduce using rule 4 (expresion -> icadena .)


state 6

    (5) expresion -> concatenacion .

    $end            reduce using rule 5 (expresion -> concatenacion .)


state 7

    (6) expresion -> incremento .

    $end            reduce using rule 6 (expresion -> incremento .)


state 8

    (7) expresion -> decremento .

    $end            reduce using rule 7 (expresion -> decremento .)


state 9

    (22) lista -> expLista .

    $end            reduce using rule 22 (lista -> expLista .)


state 10

    (23) lista -> add_lista .

    $end            reduce using rule 23 (lista -> add_lista .)


state 11

    (35) mapa -> expMapa .

    $end            reduce using rule 35 (mapa -> expMapa .)


state 12

    (36) mapa -> add_mapa .

    $end            reduce using rule 36 (mapa -> add_mapa .)


state 13

    (9) variable -> VAR . ID EQUALS expresionVar PUNTCOM
    (10) variable -> VAR . ID PUNTCOM
    (55) icadena -> VAR . ID EQUALS cadenas pto_coma
    (58) concatenacion -> VAR . ID EQUALS ID PTO SUBSTRING LPAREN NUMBER COMA NUMBER RPAREN pto_coma
    (24) expLista -> VAR . ID EQUALS NEW LISTA LPAREN NUMBER RPAREN pto_coma
    (25) expLista -> VAR . ID EQUALS NEW LISTA LPAREN RPAREN pto_coma
    (26) expLista -> VAR . ID EQUALS LCORCHETE elementosLista RCORCHETE pto_coma
    (37) expMapa -> VAR . ID EQUALS NEW MAPA LPAREN RPAREN pto_coma
    (19) expresionBool -> VAR . ID EQUALS booleano pto_coma

    ID              shift and go to state 18


state 14

    (53) incremento -> ID . INCREMENTO pto_coma
    (54) decremento -> ID . DECREMENTO pto_coma
    (27) add_lista -> ID . LCORCHETE NUMBER RCORCHETE EQUALS NUMBER pto_coma
    (28) add_lista -> ID . PTO ADD LPAREN NUMBER RPAREN pto_coma
    (29) add_lista -> ID . PTO ADD LPAREN ID RPAREN pto_coma
    (47) add_mapa -> ID . LCORCHETE COMILLAS ID COMILLAS RCORCHETE EQUALS COMILLAS ID COMILLAS pto_coma

    INCREMENTO      shift and go to state 19
    DECREMENTO      shift and go to state 20
    LCORCHETE       shift and go to state 21
    PTO             shift and go to state 22


state 15

    (11) variable -> expresionBool .

    $end            reduce using rule 11 (variable -> expresionBool .)


state 16

    (38) expMapa -> MAPA . ID EQUALS LCURLYB elementosMapa RCURLYB pto_coma

    ID              shift and go to state 23


state 17

    (18) expresionBool -> VARBOOL . ID EQUALS booleano pto_coma

    ID              shift and go to state 24


state 18

    (9) variable -> VAR ID . EQUALS expresionVar PUNTCOM
    (10) variable -> VAR ID . PUNTCOM
    (55) icadena -> VAR ID . EQUALS cadenas pto_coma
    (58) concatenacion -> VAR ID . EQUALS ID PTO SUBSTRING LPAREN NUMBER COMA NUMBER RPAREN pto_coma
    (24) expLista -> VAR ID . EQUALS NEW LISTA LPAREN NUMBER RPAREN pto_coma
    (25) expLista -> VAR ID . EQUALS NEW LISTA LPAREN RPAREN pto_coma
    (26) expLista -> VAR ID . EQUALS LCORCHETE elementosLista RCORCHETE pto_coma
    (37) expMapa -> VAR ID . EQUALS NEW MAPA LPAREN RPAREN pto_coma
    (19) expresionBool -> VAR ID . EQUALS booleano pto_coma

    EQUALS          shift and go to state 25
    PUNTCOM         shift and go to state 26


state 19

    (53) incremento -> ID INCREMENTO . pto_coma
    (63) pto_coma -> . PUNTCOM

    PUNTCOM         shift and go to state 28

    pto_coma                       shift and go to state 27

state 20

    (54) decremento -> ID DECREMENTO . pto_coma
    (63) pto_coma -> . PUNTCOM

    PUNTCOM         shift and go to state 28

    pto_coma                       shift and go to state 29

state 21

    (27) add_lista -> ID LCORCHETE . NUMBER RCORCHETE EQUALS NUMBER pto_coma
    (47) add_mapa -> ID LCORCHETE . COMILLAS ID COMILLAS RCORCHETE EQUALS COMILLAS ID COMILLAS pto_coma

    NUMBER          shift and go to state 30
    COMILLAS        shift and go to state 31


state 22

    (28) add_lista -> ID PTO . ADD LPAREN NUMBER RPAREN pto_coma
    (29) add_lista -> ID PTO . ADD LPAREN ID RPAREN pto_coma

    ADD             shift and go to state 32


state 23

    (38) expMapa -> MAPA ID . EQUALS LCURLYB elementosMapa RCURLYB pto_coma

    EQUALS          shift and go to state 33


state 24

    (18) expresionBool -> VARBOOL ID . EQUALS booleano pto_coma

    EQUALS          shift and go to state 34


state 25

    (9) variable -> VAR ID EQUALS . expresionVar PUNTCOM
    (55) icadena -> VAR ID EQUALS . cadenas pto_coma
    (58) concatenacion -> VAR ID EQUALS . ID PTO SUBSTRING LPAREN NUMBER COMA NUMBER RPAREN pto_coma
    (24) expLista -> VAR ID EQUALS . NEW LISTA LPAREN NUMBER RPAREN pto_coma
    (25) expLista -> VAR ID EQUALS . NEW LISTA LPAREN RPAREN pto_coma
    (26) expLista -> VAR ID EQUALS . LCORCHETE elementosLista RCORCHETE pto_coma
    (37) expMapa -> VAR ID EQUALS . NEW MAPA LPAREN RPAREN pto_coma
    (19) expresionBool -> VAR ID EQUALS . booleano pto_coma
    (15) expresionVar -> . valorVar
    (16) expresionVar -> . ID
    (17) expresionVar -> . expresionVar operadorA expresionVar
    (59) cadenas -> . COMILLAS ID COMILLAS
    (60) cadenas -> . COMILLAD ID COMILLAD
    (61) cadenas -> . COMIILLATS ID COMIILLATS
    (62) cadenas -> . COMILLATD ID COMILLATD
    (20) booleano -> . TRUE
    (21) booleano -> . FALSE
    (12) valorVar -> . NUMBER
    (13) valorVar -> . DOUBLE
    (14) valorVar -> . CADENA

    ID              shift and go to state 35
    NEW             shift and go to state 39
    LCORCHETE       shift and go to state 40
    COMILLAS        shift and go to state 43
    COMILLAD        shift and go to state 44
    COMIILLATS      shift and go to state 45
    COMILLATD       shift and go to state 46
    TRUE            shift and go to state 47
    FALSE           shift and go to state 48
    NUMBER          shift and go to state 38
    DOUBLE          shift and go to state 49
    CADENA          shift and go to state 50

    expresionVar                   shift and go to state 36
    cadenas                        shift and go to state 37
    booleano                       shift and go to state 41
    valorVar                       shift and go to state 42

state 26

    (10) variable -> VAR ID PUNTCOM .

    $end            reduce using rule 10 (variable -> VAR ID PUNTCOM .)


state 27

    (53) incremento -> ID INCREMENTO pto_coma .

    $end            reduce using rule 53 (incremento -> ID INCREMENTO pto_coma .)


state 28

    (63) pto_coma -> PUNTCOM .

    $end            reduce using rule 63 (pto_coma -> PUNTCOM .)


state 29

    (54) decremento -> ID DECREMENTO pto_coma .

    $end            reduce using rule 54 (decremento -> ID DECREMENTO pto_coma .)


state 30

    (27) add_lista -> ID LCORCHETE NUMBER . RCORCHETE EQUALS NUMBER pto_coma

    RCORCHETE       shift and go to state 51


state 31

    (47) add_mapa -> ID LCORCHETE COMILLAS . ID COMILLAS RCORCHETE EQUALS COMILLAS ID COMILLAS pto_coma

    ID              shift and go to state 52


state 32

    (28) add_lista -> ID PTO ADD . LPAREN NUMBER RPAREN pto_coma
    (29) add_lista -> ID PTO ADD . LPAREN ID RPAREN pto_coma

    LPAREN          shift and go to state 53


state 33

    (38) expMapa -> MAPA ID EQUALS . LCURLYB elementosMapa RCURLYB pto_coma

    LCURLYB         shift and go to state 54


state 34

    (18) expresionBool -> VARBOOL ID EQUALS . booleano pto_coma
    (20) booleano -> . TRUE
    (21) booleano -> . FALSE

    TRUE            shift and go to state 47
    FALSE           shift and go to state 48

    booleano                       shift and go to state 55

state 35

    (58) concatenacion -> VAR ID EQUALS ID . PTO SUBSTRING LPAREN NUMBER COMA NUMBER RPAREN pto_coma
    (16) expresionVar -> ID .

    PTO             shift and go to state 56
    PUNTCOM         reduce using rule 16 (expresionVar -> ID .)
    PLUS            reduce using rule 16 (expresionVar -> ID .)
    MINUS           reduce using rule 16 (expresionVar -> ID .)
    TIMES           reduce using rule 16 (expresionVar -> ID .)
    DIVIDE          reduce using rule 16 (expresionVar -> ID .)
    DIVIDE_E        reduce using rule 16 (expresionVar -> ID .)


state 36

    (9) variable -> VAR ID EQUALS expresionVar . PUNTCOM
    (17) expresionVar -> expresionVar . operadorA expresionVar
    (48) operadorA -> . PLUS
    (49) operadorA -> . MINUS
    (50) operadorA -> . TIMES
    (51) operadorA -> . DIVIDE
    (52) operadorA -> . DIVIDE_E

    PUNTCOM         shift and go to state 57
    PLUS            shift and go to state 59
    MINUS           shift and go to state 60
    TIMES           shift and go to state 61
    DIVIDE          shift and go to state 62
    DIVIDE_E        shift and go to state 63

    operadorA                      shift and go to state 58

state 37

    (55) icadena -> VAR ID EQUALS cadenas . pto_coma
    (63) pto_coma -> . PUNTCOM

    PUNTCOM         shift and go to state 28

    pto_coma                       shift and go to state 64

state 38

    (12) valorVar -> NUMBER .

    PUNTCOM         reduce using rule 12 (valorVar -> NUMBER .)
    PLUS            reduce using rule 12 (valorVar -> NUMBER .)
    MINUS           reduce using rule 12 (valorVar -> NUMBER .)
    TIMES           reduce using rule 12 (valorVar -> NUMBER .)
    DIVIDE          reduce using rule 12 (valorVar -> NUMBER .)
    DIVIDE_E        reduce using rule 12 (valorVar -> NUMBER .)


state 39

    (24) expLista -> VAR ID EQUALS NEW . LISTA LPAREN NUMBER RPAREN pto_coma
    (25) expLista -> VAR ID EQUALS NEW . LISTA LPAREN RPAREN pto_coma
    (37) expMapa -> VAR ID EQUALS NEW . MAPA LPAREN RPAREN pto_coma

    LISTA           shift and go to state 65
    MAPA            shift and go to state 66


state 40

    (26) expLista -> VAR ID EQUALS LCORCHETE . elementosLista RCORCHETE pto_coma
    (30) elementosLista -> . COMILLAS ID COMILLAS
    (31) elementosLista -> . COMILLAS ID COMILLAS COMA elementosLista
    (32) elementosLista -> . COMILLAS NUMBER COMILLAS
    (33) elementosLista -> . COMILLAS NUMBER COMILLAS COMA elementosLista
    (34) elementosLista -> .

    COMILLAS        shift and go to state 68
    RCORCHETE       reduce using rule 34 (elementosLista -> .)

    elementosLista                 shift and go to state 67

state 41

    (19) expresionBool -> VAR ID EQUALS booleano . pto_coma
    (63) pto_coma -> . PUNTCOM

    PUNTCOM         shift and go to state 28

    pto_coma                       shift and go to state 69

state 42

    (15) expresionVar -> valorVar .

    PUNTCOM         reduce using rule 15 (expresionVar -> valorVar .)
    PLUS            reduce using rule 15 (expresionVar -> valorVar .)
    MINUS           reduce using rule 15 (expresionVar -> valorVar .)
    TIMES           reduce using rule 15 (expresionVar -> valorVar .)
    DIVIDE          reduce using rule 15 (expresionVar -> valorVar .)
    DIVIDE_E        reduce using rule 15 (expresionVar -> valorVar .)


state 43

    (59) cadenas -> COMILLAS . ID COMILLAS

    ID              shift and go to state 70


state 44

    (60) cadenas -> COMILLAD . ID COMILLAD

    ID              shift and go to state 71


state 45

    (61) cadenas -> COMIILLATS . ID COMIILLATS

    ID              shift and go to state 72


state 46

    (62) cadenas -> COMILLATD . ID COMILLATD

    ID              shift and go to state 73


state 47

    (20) booleano -> TRUE .

    PUNTCOM         reduce using rule 20 (booleano -> TRUE .)


state 48

    (21) booleano -> FALSE .

    PUNTCOM         reduce using rule 21 (booleano -> FALSE .)


state 49

    (13) valorVar -> DOUBLE .

    PUNTCOM         reduce using rule 13 (valorVar -> DOUBLE .)
    PLUS            reduce using rule 13 (valorVar -> DOUBLE .)
    MINUS           reduce using rule 13 (valorVar -> DOUBLE .)
    TIMES           reduce using rule 13 (valorVar -> DOUBLE .)
    DIVIDE          reduce using rule 13 (valorVar -> DOUBLE .)
    DIVIDE_E        reduce using rule 13 (valorVar -> DOUBLE .)


state 50

    (14) valorVar -> CADENA .

    PUNTCOM         reduce using rule 14 (valorVar -> CADENA .)
    PLUS            reduce using rule 14 (valorVar -> CADENA .)
    MINUS           reduce using rule 14 (valorVar -> CADENA .)
    TIMES           reduce using rule 14 (valorVar -> CADENA .)
    DIVIDE          reduce using rule 14 (valorVar -> CADENA .)
    DIVIDE_E        reduce using rule 14 (valorVar -> CADENA .)


state 51

    (27) add_lista -> ID LCORCHETE NUMBER RCORCHETE . EQUALS NUMBER pto_coma

    EQUALS          shift and go to state 74


state 52

    (47) add_mapa -> ID LCORCHETE COMILLAS ID . COMILLAS RCORCHETE EQUALS COMILLAS ID COMILLAS pto_coma

    COMILLAS        shift and go to state 75


state 53

    (28) add_lista -> ID PTO ADD LPAREN . NUMBER RPAREN pto_coma
    (29) add_lista -> ID PTO ADD LPAREN . ID RPAREN pto_coma

    NUMBER          shift and go to state 77
    ID              shift and go to state 76


state 54

    (38) expMapa -> MAPA ID EQUALS LCURLYB . elementosMapa RCURLYB pto_coma
    (39) elementosMapa -> . COMILLAS valor COMILLAS DOSPTO COMILLAS valor COMILLAS
    (40) elementosMapa -> . COMILLAS valor COMILLAS DOSPTO COMILLAS valor COMILLAS COMA elementosMapa
    (41) elementosMapa -> . COMILLAS valor COMILLAS DOSPTO NUMBER
    (42) elementosMapa -> . COMILLAS valor COMILLAS DOSPTO NUMBER COMA elementosMapa
    (43) elementosMapa -> . NUMBER DOSPTO COMILLAS valor COMILLAS
    (44) elementosMapa -> . NUMBER DOSPTO COMILLAS valor COMILLAS COMA elementosMapa
    (45) elementosMapa -> . NUMBER DOSPTO NUMBER
    (46) elementosMapa -> . NUMBER DOSPTO NUMBER COMA elementosMapa

    COMILLAS        shift and go to state 79
    NUMBER          shift and go to state 80

    elementosMapa                  shift and go to state 78

state 55

    (18) expresionBool -> VARBOOL ID EQUALS booleano . pto_coma
    (63) pto_coma -> . PUNTCOM

    PUNTCOM         shift and go to state 28

    pto_coma                       shift and go to state 81

state 56

    (58) concatenacion -> VAR ID EQUALS ID PTO . SUBSTRING LPAREN NUMBER COMA NUMBER RPAREN pto_coma

    SUBSTRING       shift and go to state 82


state 57

    (9) variable -> VAR ID EQUALS expresionVar PUNTCOM .

    $end            reduce using rule 9 (variable -> VAR ID EQUALS expresionVar PUNTCOM .)


state 58

    (17) expresionVar -> expresionVar operadorA . expresionVar
    (15) expresionVar -> . valorVar
    (16) expresionVar -> . ID
    (17) expresionVar -> . expresionVar operadorA expresionVar
    (12) valorVar -> . NUMBER
    (13) valorVar -> . DOUBLE
    (14) valorVar -> . CADENA

    ID              shift and go to state 84
    NUMBER          shift and go to state 38
    DOUBLE          shift and go to state 49
    CADENA          shift and go to state 50

    expresionVar                   shift and go to state 83
    valorVar                       shift and go to state 42

state 59

    (48) operadorA -> PLUS .

    ID              reduce using rule 48 (operadorA -> PLUS .)
    NUMBER          reduce using rule 48 (operadorA -> PLUS .)
    DOUBLE          reduce using rule 48 (operadorA -> PLUS .)
    CADENA          reduce using rule 48 (operadorA -> PLUS .)


state 60

    (49) operadorA -> MINUS .

    ID              reduce using rule 49 (operadorA -> MINUS .)
    NUMBER          reduce using rule 49 (operadorA -> MINUS .)
    DOUBLE          reduce using rule 49 (operadorA -> MINUS .)
    CADENA          reduce using rule 49 (operadorA -> MINUS .)


state 61

    (50) operadorA -> TIMES .

    ID              reduce using rule 50 (operadorA -> TIMES .)
    NUMBER          reduce using rule 50 (operadorA -> TIMES .)
    DOUBLE          reduce using rule 50 (operadorA -> TIMES .)
    CADENA          reduce using rule 50 (operadorA -> TIMES .)


state 62

    (51) operadorA -> DIVIDE .

    ID              reduce using rule 51 (operadorA -> DIVIDE .)
    NUMBER          reduce using rule 51 (operadorA -> DIVIDE .)
    DOUBLE          reduce using rule 51 (operadorA -> DIVIDE .)
    CADENA          reduce using rule 51 (operadorA -> DIVIDE .)


state 63

    (52) operadorA -> DIVIDE_E .

    ID              reduce using rule 52 (operadorA -> DIVIDE_E .)
    NUMBER          reduce using rule 52 (operadorA -> DIVIDE_E .)
    DOUBLE          reduce using rule 52 (operadorA -> DIVIDE_E .)
    CADENA          reduce using rule 52 (operadorA -> DIVIDE_E .)


state 64

    (55) icadena -> VAR ID EQUALS cadenas pto_coma .

    $end            reduce using rule 55 (icadena -> VAR ID EQUALS cadenas pto_coma .)


state 65

    (24) expLista -> VAR ID EQUALS NEW LISTA . LPAREN NUMBER RPAREN pto_coma
    (25) expLista -> VAR ID EQUALS NEW LISTA . LPAREN RPAREN pto_coma

    LPAREN          shift and go to state 85


state 66

    (37) expMapa -> VAR ID EQUALS NEW MAPA . LPAREN RPAREN pto_coma

    LPAREN          shift and go to state 86


state 67

    (26) expLista -> VAR ID EQUALS LCORCHETE elementosLista . RCORCHETE pto_coma

    RCORCHETE       shift and go to state 87


state 68

    (30) elementosLista -> COMILLAS . ID COMILLAS
    (31) elementosLista -> COMILLAS . ID COMILLAS COMA elementosLista
    (32) elementosLista -> COMILLAS . NUMBER COMILLAS
    (33) elementosLista -> COMILLAS . NUMBER COMILLAS COMA elementosLista

    ID              shift and go to state 88
    NUMBER          shift and go to state 89


state 69

    (19) expresionBool -> VAR ID EQUALS booleano pto_coma .

    $end            reduce using rule 19 (expresionBool -> VAR ID EQUALS booleano pto_coma .)


state 70

    (59) cadenas -> COMILLAS ID . COMILLAS

    COMILLAS        shift and go to state 90


state 71

    (60) cadenas -> COMILLAD ID . COMILLAD

    COMILLAD        shift and go to state 91


state 72

    (61) cadenas -> COMIILLATS ID . COMIILLATS

    COMIILLATS      shift and go to state 92


state 73

    (62) cadenas -> COMILLATD ID . COMILLATD

    COMILLATD       shift and go to state 93


state 74

    (27) add_lista -> ID LCORCHETE NUMBER RCORCHETE EQUALS . NUMBER pto_coma

    NUMBER          shift and go to state 94


state 75

    (47) add_mapa -> ID LCORCHETE COMILLAS ID COMILLAS . RCORCHETE EQUALS COMILLAS ID COMILLAS pto_coma

    RCORCHETE       shift and go to state 95


state 76

    (29) add_lista -> ID PTO ADD LPAREN ID . RPAREN pto_coma

    RPAREN          shift and go to state 96


state 77

    (28) add_lista -> ID PTO ADD LPAREN NUMBER . RPAREN pto_coma

    RPAREN          shift and go to state 97


state 78

    (38) expMapa -> MAPA ID EQUALS LCURLYB elementosMapa . RCURLYB pto_coma

    RCURLYB         shift and go to state 98


state 79

    (39) elementosMapa -> COMILLAS . valor COMILLAS DOSPTO COMILLAS valor COMILLAS
    (40) elementosMapa -> COMILLAS . valor COMILLAS DOSPTO COMILLAS valor COMILLAS COMA elementosMapa
    (41) elementosMapa -> COMILLAS . valor COMILLAS DOSPTO NUMBER
    (42) elementosMapa -> COMILLAS . valor COMILLAS DOSPTO NUMBER COMA elementosMapa
    (56) valor -> . ID
    (57) valor -> . NUMBER

    ID              shift and go to state 101
    NUMBER          shift and go to state 100

    valor                          shift and go to state 99

state 80

    (43) elementosMapa -> NUMBER . DOSPTO COMILLAS valor COMILLAS
    (44) elementosMapa -> NUMBER . DOSPTO COMILLAS valor COMILLAS COMA elementosMapa
    (45) elementosMapa -> NUMBER . DOSPTO NUMBER
    (46) elementosMapa -> NUMBER . DOSPTO NUMBER COMA elementosMapa

    DOSPTO          shift and go to state 102


state 81

    (18) expresionBool -> VARBOOL ID EQUALS booleano pto_coma .

    $end            reduce using rule 18 (expresionBool -> VARBOOL ID EQUALS booleano pto_coma .)


state 82

    (58) concatenacion -> VAR ID EQUALS ID PTO SUBSTRING . LPAREN NUMBER COMA NUMBER RPAREN pto_coma

    LPAREN          shift and go to state 103


state 83

    (17) expresionVar -> expresionVar operadorA expresionVar .
    (17) expresionVar -> expresionVar . operadorA expresionVar
    (48) operadorA -> . PLUS
    (49) operadorA -> . MINUS
    (50) operadorA -> . TIMES
    (51) operadorA -> . DIVIDE
    (52) operadorA -> . DIVIDE_E

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for DIVIDE_E resolved as shift
    PUNTCOM         reduce using rule 17 (expresionVar -> expresionVar operadorA expresionVar .)
    PLUS            shift and go to state 59
    MINUS           shift and go to state 60
    TIMES           shift and go to state 61
    DIVIDE          shift and go to state 62
    DIVIDE_E        shift and go to state 63

  ! PLUS            [ reduce using rule 17 (expresionVar -> expresionVar operadorA expresionVar .) ]
  ! MINUS           [ reduce using rule 17 (expresionVar -> expresionVar operadorA expresionVar .) ]
  ! TIMES           [ reduce using rule 17 (expresionVar -> expresionVar operadorA expresionVar .) ]
  ! DIVIDE          [ reduce using rule 17 (expresionVar -> expresionVar operadorA expresionVar .) ]
  ! DIVIDE_E        [ reduce using rule 17 (expresionVar -> expresionVar operadorA expresionVar .) ]
